--- a/Lag.html
+++ b/Lag.html
@@ -1,87 +1,104 @@
 <!DOCTYPE html> <!--Skapad av Wallin-->
-<html lang="sv"> 
-    <head> 
-        <meta charset="utf-8">
-        <title>Lag</title>
-        <link rel="stylesheet" href="style.css">
-        
-    </head> 
-   <body>  
-       	<nav>
-		  <ul>
-				<li><a href="index.html">Startsida</a></li> <!-- länkar de övriga sidorna och namnger länkarna -->
-				<li><a href="ProjektCounter-StrikeConditionZero.html">Condition Zero</a></li><!-- länkar de övriga sidorna och namnger länkarna -->
-				<li><a href="ProjektCounter-StrikeGlobalOffensive.html">Global Offensive</a></li><!-- länkar de övriga sidorna och namnger länkarna -->
-				<li><a href="ProjektCounter-Strike.html">Counter Strike</a></li> <!-- länkar de övriga sidorna och namnger länkarna -->
-				<li><a href="ProjektCounter-StrikeZero.html">Source</a></li><!-- länkar de övriga sidorna och namnger länkarna -->
-				<li><a class="active" href="ProjektTävlingarochlag.html">Tävlingar och Lag</a></li><!-- länkar de övriga sidorna och namnger länkarna -->
-		  </ul>
-	   </nav>
-        <nav>
-		<ul><!--Skapar den lokala listan-->
-		  	<li><a href="ProjektTävlingarochlag.html">Tävlingar och lag</a></li><!--Länkar till förtsa sidan i lokala menyn-->
-			<li><a class="active2" href="Lag.html">Lag</a></li><!--Länkar till andra sidan i lokala menyn-->
-            <li><a href="Tävlingar.html">Tävlingar</a></li><!--Länkar till tredje sidan i lokala menyn-->
-		</ul>
-	   </nav>
-
-        <h1>Top 10 Lag</h1>
-		<table>	<!-- Skapar tabell -->
-			<tr> <!-- Skapar den första raden -->
-				<th>Namn</th> <!-- Skapar första huvudtitlen -->
-				<th>Flagga</th> <!-- Skapar andra huvudtitlen -->
-				<th>Land</th> <!-- Skapar trejde huvudtitlen -->
-			</tr> <!-- Avslutar första raden -->
-			<tr>
-				<td>Astralis</td>
-				<td><img class="lag" src="https://static.hltv.org/images/team/logo/6665" alt="Astralis"></td> 
-				<td>Danmark</td>
-			</tr>
-			<tr>
-				<td>Fnatic</td>
-				<td><img  src="https://static.hltv.org/images/team/logo/4991" alt="Fnatic"></td> 
-				<td>Svergie</td>
-			</tr>
-			<tr>
-				<td>Natus Vincere</td>
-				<td><img class="lag" src="https://static.hltv.org/images/team/logo/4608" alt="Natus Vincere"></td> 
-				<td>Polen</td>
-			</tr>
-			<tr>
-				<td>Mousesports</td>
-				<td><img class="lag" src="https://static.hltv.org/images/team/logo/4494" alt="Mousesports"></td> 
-				<td>Tyskland</td>
-			</tr>
-			<tr>
-				<td>Liquid</td>
-				<td><img class="lag" src="https://static.hltv.org/images/team/logo/5973" alt="Natus Vincere"></td> 
-				<td>USA</td>
-			</tr>
-			<tr>
-				<td>G2</td>
-				<td><img class="lag" src="https://static.hltv.org/images/team/logo/5995" alt="G2"></td> 
-				<td>Frankrike</td>
-			</tr>
-			<tr>
-				<td>FaZe</td>
-				<td><img class="lag" src="https://static.hltv.org/images/team/logo/6667" alt="FaZe"></td> 
-				<td>USA</td>
-			</tr>
-			<tr>
-				<td>Evil Geniuses</td>
-				<td><img class="lag" src="https://static.hltv.org/images/team/logo/10399" alt="USA"></td> 
-				<td>USA</td>
-			</tr>
-			<tr>
-				<td>Vitality</td>
-				<td><img class="lag" src="https://static.hltv.org/images/team/logo/9565" alt="Vitality"></td> 
-				<td>Frankrike</td>
-			</tr>
-			<tr>
-				<td>100 Thieves</td>
-				<td><img class="lag" src="https://static.hltv.org/images/team/logo/8474" alt="100 Thieves"></td> 
-				<td>Australien</td>
-			</tr> 
-		</table> <!-- Avslutar tabellen -->
-    </body>
- </html>
+<html lang="sv">
+   <head>
+      <meta charset="utf-8">
+      <title>Lag</title>
+      <link rel="stylesheet" href="style.css">
+   </head>
+   <body>
+	<header>
+      <nav>
+         <ul>
+            <li><a href="index.html">Startsida</a></li>
+            <!-- länkar de övriga sidorna och namnger länkarna -->
+            <li><a href="ProjektCounter-StrikeConditionZero.html">Condition Zero</a></li>
+            <!-- länkar de övriga sidorna och namnger länkarna -->
+            <li><a href="ProjektCounter-StrikeGlobalOffensive.html">Global Offensive</a></li>
+            <!-- länkar de övriga sidorna och namnger länkarna -->
+            <li><a href="ProjektCounter-Strike.html">Counter Strike</a></li>
+            <!-- länkar de övriga sidorna och namnger länkarna -->
+            <li><a href="ProjektCounter-StrikeZero.html">Source</a></li>
+            <!-- länkar de övriga sidorna och namnger länkarna -->
+            <li><a class="active" href="ProjektTävlingarochlag.html">Tävlingar och Lag</a></li>
+            <!-- länkar de övriga sidorna och namnger länkarna -->
+         </ul>
+      </nav>
+	  </header>
+      <nav>
+         <ul>
+            <!--Skapar den lokala listan-->
+            <li><a href="ProjektTävlingarochlag.html">Tävlingar och lag</a></li>
+            <!--Länkar till förtsa sidan i lokala menyn-->
+            <li><a class="active2" href="Lag.html">Lag</a></li>
+            <!--Länkar till andra sidan i lokala menyn-->
+            <li><a href="Tävlingar.html">Tävlingar</a></li>
+            <!--Länkar till tredje sidan i lokala menyn-->
+         </ul>
+      </nav>
+      <h1>Top 10 Lag</h1>
+      <table>
+         <!-- Skapar tabell -->
+         <tr>
+            <!-- Skapar den första raden -->
+            <th>Namn</th>
+            <!-- Skapar första huvudtitlen -->
+            <th>Flagga</th>
+            <!-- Skapar andra huvudtitlen -->
+            <th>Land</th>
+            <!-- Skapar trejde huvudtitlen -->
+         </tr>
+         <!-- Avslutar första raden -->
+         <tr>
+            <td>Astralis</td>
+            <td><img class="lag" src="https://static.hltv.org/images/team/logo/6665" alt="Astralis"></td>
+            <td>Danmark</td>
+         </tr>
+         <tr>
+            <td>Fnatic</td>
+            <td><img class="lag" src="https://static.hltv.org/images/team/logo/4991" alt="Fnatic"></td>
+            <td>Svergie</td>
+         </tr>
+         <tr>
+            <td>Natus Vincere</td>
+            <td><img class="lag" src="https://static.hltv.org/images/team/logo/4608" alt="Natus Vincere"></td>
+            <td>Polen</td>
+         </tr>
+         <tr>
+            <td>Mousesports</td>
+            <td><img class="lag" src="https://static.hltv.org/images/team/logo/4494" alt="Mousesports"></td>
+            <td>Tyskland</td>
+         </tr>
+         <tr>
+            <td>Liquid</td>
+            <td><img class="lag" src="https://static.hltv.org/images/team/logo/5973" alt="Natus Vincere"></td>
+            <td>USA</td>
+         </tr>
+         <tr>
+            <td>G2</td>
+            <td><img class="lag" src="https://static.hltv.org/images/team/logo/5995" alt="G2"></td>
+            <td>Frankrike</td>
+         </tr>
+         <tr>
+            <td>FaZe</td>
+            <td><img class="lag" src="https://static.hltv.org/images/team/logo/6667" alt="FaZe"></td>
+            <td>USA</td>
+         </tr>
+         <tr>
+            <td>Evil Geniuses</td>
+            <td><img class="lag" src="https://static.hltv.org/images/team/logo/10399" alt="USA"></td>
+            <td>USA</td>
+         </tr>
+         <tr>
+            <td>Vitality</td>
+            <td><img class="lag" src="https://static.hltv.org/images/team/logo/9565" alt="Vitality"></td>
+            <td>Frankrike</td>
+         </tr>
+         <tr>
+            <td>100 Thieves</td>
+            <td><img class="lag" src="https://static.hltv.org/images/team/logo/8474" alt="100 Thieves"></td>
+            <td>Australien</td>
+         </tr>
+      </table>
+      <!-- Avslutar tabellen -->
+   </body>
+</html>
