--- a/ProjektCounter-StrikeConditionZero.html
+++ b/ProjektCounter-StrikeConditionZero.html
@@ -1,30 +1,56 @@
 <!DOCTYPE html><!-- bestämmer vilken htmlversion som ska tolkas -->
-<html lang="sv"><!-- bestämmer på vilket språk sidan ska tolkas -->
-	<head><!-- dokumentets head	-->
-		<title>Counter-Strike Condition Zero</title><!-- namnger hemsidan-->
-		<meta charset="utf-8"><!-- bestämmer vilken unicode som används -->
-		<link href="style.css" rel="stylesheet"> <!-- länkar till cssdokumentet -->
-	</head><!-- avslutar head -->
-	<body><!-- starar body -->
-		<nav> <!-- skapar en navbar/global meny -->
-			<ul><!-- skapar en osorterad lista  -->
-				<li><a href="index.html">Startsida</a></li> <!-- länkar de övriga sidorna och namnger länkarna -->
-				<li><a class="active" href="ProjektCounter-StrikeConditionZero.html">Condition Zero</a></li><!-- länkar de övriga sidorna och namnger länkarna -->
-				<li><a href="ProjektCounter-StrikeGlobalOffensive.html">Global Offensive</a></li><!-- länkar de övriga sidorna och namnger länkarna -->
-				<li><a href="ProjektCounter-Strike.html">Counter Strike</a></li> <!-- länkar de övriga sidorna och namnger länkarna -->
-				<li><a href="ProjektCounter-StrikeZero.html">Source</a></li><!-- länkar de övriga sidorna och namnger länkarna -->
-				<li><a href="ProjektTävlingarochlag.html">Tävlingar och Lag</a></li><!-- länkar de övriga sidorna och namnger länkarna -->
-			</ul><!-- avslutar ul -->
-		</nav>    <!-- avslutar nav -->
-		<div class="infotext"> <!-- skapar en div som gör att all text på startsidan blir likadan  -->
-			<h1>Condition Zero</h1> <!-- skapar en h1-rubrik -->
-			<pre><!-- skapar en pre som visar upp texten på samma sätt som den är skriven i htmldokumentet -->
-			Counter-Strike: Condition Zero är ett PC-spel som utgör uppföljare till Counter-Strike och släpptes den 21 mars 2004.[1][2]
-			Den största förändringen jämfört med Counter-Strike är att spelet har en stor enspelardel. Spelet är uppdelat i två delar: Counter-Strike: Condition Zero och Counter-Strike: Condition Zero - Deleted scenes. Man har i jämförelse med föregångaren förbättrat grafiken en aning, förändrat ljudet något, och ändrat vapnen. Man har även förändrat många spelbanor på detaljnivå.
-			Det finns dessutom AI-styrda datormotståndare installerade i spelet. I likhet med Counter-Strike finns även i Counter-Strike: Condition Zero möjlighet att spela uppdrag och att spela online med andra spelare. Spelet har anklagats för att vara ett försök av Valve att mjölka pengar ur succén med Counter-Strike.
-			Den huvudsakliga skillnaden mellan delarna Counter-strike: Condition Zero och Counter-Strike: Condition Zero - Deleted scenes är att "Deleted Scenes" spelas i ett enspelarläge offline, där man ska genomföra uppdrag, medan den andra delen är ett flerspelarläge där man kan spela mot AI-spelare med valbar svårighetsgrad eller online mot andra mänskliga spelare världen över.
-			</pre> <!-- avslutar pre -->
-		</div>		<!-- avslutar div -->
-		<img class="Bild1" src="https://upload.wikimedia.org/wikipedia/en/a/a8/CZbox.jpg" alt="Tävling">	<!-- lägger till en bild på sidan -->
-	</body><!-- avslutar body -->
-</html><!-- avslutar html -->
+<html lang="sv">
+   <!-- bestämmer på vilket språk sidan ska tolkas -->
+   <head>
+      <!-- dokumentets head	-->
+      <title>Counter-Strike Condition Zero</title>
+      <!-- namnger hemsidan-->
+      <meta charset="utf-8">
+      <!-- bestämmer vilken unicode som används -->
+      <link href="style.css" rel="stylesheet">
+      <!-- länkar till cssdokumentet -->
+   </head>
+   <!-- avslutar head -->
+   <body>
+      <!-- starar body -->
+	  <header>
+      <nav>
+         <!-- skapar en navbar/global meny -->
+         <ul>
+            <!-- skapar en osorterad lista  -->
+            <li><a href="index.html">Startsida</a></li>
+            <!-- länkar de övriga sidorna och namnger länkarna -->
+            <li><a class="active" href="ProjektCounter-StrikeConditionZero.html">Condition Zero</a></li>
+            <!-- länkar de övriga sidorna och namnger länkarna -->
+            <li><a href="ProjektCounter-StrikeGlobalOffensive.html">Global Offensive</a></li>
+            <!-- länkar de övriga sidorna och namnger länkarna -->
+            <li><a href="ProjektCounter-Strike.html">Counter Strike</a></li>
+            <!-- länkar de övriga sidorna och namnger länkarna -->
+            <li><a href="ProjektCounter-StrikeZero.html">Source</a></li>
+            <!-- länkar de övriga sidorna och namnger länkarna -->
+            <li><a href="ProjektTävlingarochlag.html">Tävlingar och Lag</a></li>
+            <!-- länkar de övriga sidorna och namnger länkarna -->
+         </ul>
+         <!-- avslutar ul -->
+      </nav>
+      <!-- avslutar nav -->
+	  </header>
+      <main class="infotext">
+         <!-- skapar en main som gör att all text på startsidan blir likadan  -->
+         <h1>Condition Zero</h1>
+         <!-- skapar en h1-rubrik -->
+         <p>
+            <!-- skapar en paragraph som visar upp texten på samma sätt som den är skriven i htmldokumentet -->
+            Counter-Strike: Condition Zero är ett PC-spel som utgör uppföljare till Counter-Strike och släpptes den 21 mars 2004.
+            Den största förändringen jämfört med Counter-Strike är att spelet har en stor enspelardel. Spelet är uppdelat i två delar: Counter-Strike: Condition Zero och Counter-Strike: Condition Zero - Deleted scenes. Man har i jämförelse med föregångaren förbättrat grafiken en aning, förändrat ljudet något, och ändrat vapnen. Man har även förändrat många spelbanor på detaljnivå.
+            Det finns dessutom AI-styrda datormotståndare installerade i spelet. I likhet med Counter-Strike finns även i Counter-Strike: Condition Zero möjlighet att spela uppdrag och att spela online med andra spelare. Spelet har anklagats för att vara ett försök av Valve att mjölka pengar ur succén med Counter-Strike.
+            Den huvudsakliga skillnaden mellan delarna Counter-strike: Condition Zero och Counter-Strike: Condition Zero - Deleted scenes är att "Deleted Scenes" spelas i ett enspelarläge offline, där man ska genomföra uppdrag, medan den andra delen är ett flerspelarläge där man kan spela mot AI-spelare med valbar svårighetsgrad eller online mot andra mänskliga spelare världen över.
+         </p>
+         <!-- avslutar paragraph -->
+      </main>
+      <!-- avslutar main -->
+      <img src="https://upload.wikimedia.org/wikipedia/en/a/a8/CZbox.jpg" alt="En bild på spelets framsida"><!-- Lägger till en bild -->
+   </body>
+   <!-- avslutar body -->
+</html>
+<!-- avslutar html -->
