--- a/ProjektCounter-StrikeZero.html
+++ b/ProjektCounter-StrikeZero.html
@@ -1,33 +1,57 @@
 <!DOCTYPE html><!-- bestämmer vilken htmlversion som ska tolkas -->
-<html lang="sv"><!-- bestämmer på vilket språk sidan ska tolkas -->
-	<head><!-- dokumentets head	-->
-		<title>Counter-Strike Zero</title><!-- namnger hemsidan-->
-		<meta charset="utf-8"><!-- bestämmer vilken unicode som används -->
-		<link href="style.css" rel="stylesheet"> <!-- länkar till cssdokumentet -->
-	</head><!-- avslutar head -->
-	<body><!-- starar body -->
-		<nav> <!-- skapar en navbar/global meny -->
-			<ul><!-- skapar en osorterad lista  -->
-				<li><a href="index.html">Startsida</a></li> <!-- länkar de övriga sidorna och namnger länkarna -->
-				<li><a href="ProjektCounter-StrikeConditionZero.html">Condition Zero</a></li><!-- länkar de övriga sidorna och namnger länkarna -->
-				<li><a href="ProjektCounter-StrikeGlobalOffensive.html">Global Offensive</a></li><!-- länkar de övriga sidorna och namnger länkarna -->
-				<li><a href="ProjektCounter-Strike.html">Counter Strike</a></li> <!-- länkar de övriga sidorna och namnger länkarna -->
-				<li><a class="active" href="ProjektCounter-StrikeZero.html">Source</a></li><!-- länkar de övriga sidorna och namnger länkarna -->
-				<li><a href="ProjektTävlingarochlag.html">Tävlingar och Lag</a></li><!-- länkar de övriga sidorna och namnger länkarna -->
-			</ul><!-- avslutar ul -->
-		</nav>    <!-- avslutar nav -->
-		<div class="infotext"> <!-- skapar en div som gör att all text på startsidan blir likadan  -->
-			<h1>Zero</h1> <!-- skapar en h1-rubrik -->
-			<pre><!-- skapar en pre som visar upp texten på samma sätt som den är skriven i htmldokumentet -->
-			Counter-Strike: Source är ett multiplayerspel, men spelaren kan också spela mot datorstyrda motståndare. 
-			Spelaren väljer ett lag, antingen terrorist eller antiterrorist, och målen för seger skiljer sig åt från bana till bana.
-			Varje bana spelas ett överenskommet antal omgångar innan man byter till nästa. 
-			Det går alltid att vinna omgången genom att döda hela det andra laget. 
-			Andra segervillkor kan vara att terroristerna ska spränga en plats, och då ska antiterroristsstyrkan försöka hindra bomben från att explodera eller gisslanuppdrag, där terroristerna har tagit gisslan och antiterroristsstyrkan ska rädda dem.
-			För att utföra uppdraget så har båda lagen virtuella vapen till sitt förfogande. De flesta av dessa är baserade på verkliga vapen. 
-			Dessa köps i början av omgången med pengar som man tjänar genom att vinna rundor och döda motståndare.
-			</pre> <!-- avslutar pre -->
-		</div>		<!-- avslutar div -->
-		<img class="Bild1" src="https://fiverr-res.cloudinary.com/images/t_main1,q_auto,f_auto,q_auto,f_auto/gigs/110952558/original/1e50e38e0e26ad49c9b6f13b43bde79bfe7e4d98/counter-strike-source-best-non-steam-server-make-for-u.jpg" alt="Tävling"><!-- lägger till en bild på sidan -->
-	</body><!-- avslutar body -->
-</html><!-- avslutar html -->
+<html lang="sv">
+   <!-- bestämmer på vilket språk sidan ska tolkas -->
+   <head>
+      <!-- dokumentets head	-->
+      <title>Counter-Strike Zero</title>
+      <!-- namnger hemsidan-->
+      <meta charset="utf-8">
+      <!-- bestämmer vilken unicode som används -->
+      <link href="style.css" rel="stylesheet">
+      <!-- länkar till cssdokumentet -->
+   </head>
+   <!-- avslutar head -->
+   <body>
+      <!-- starar body -->
+	  <header>
+      <nav><!-- skapar en navbar/global meny -->
+      <ul>
+         <!-- skapar en osorterad lista  -->
+         <li><a href="index.html">Startsida</a></li>
+         <!-- länkar de övriga sidorna och namnger länkarna -->
+         <li><a href="ProjektCounter-StrikeConditionZero.html">Condition Zero</a></li>
+         <!-- länkar de övriga sidorna och namnger länkarna -->
+         <li><a href="ProjektCounter-StrikeGlobalOffensive.html">Global Offensive</a></li>
+         <!-- länkar de övriga sidorna och namnger länkarna -->
+         <li><a href="ProjektCounter-Strike.html">Counter Strike</a></li>
+         <!-- länkar de övriga sidorna och namnger länkarna -->
+         <li><a class="active" href="ProjektCounter-StrikeZero.html">Source</a></li>
+         <!-- länkar de övriga sidorna och namnger länkarna -->
+         <li><a href="ProjektTävlingarochlag.html">Tävlingar och Lag</a></li>
+         <!-- länkar de övriga sidorna och namnger länkarna -->
+      </ul>
+      <!-- avslutar ul -->
+      </nav>    <!-- avslutar nav -->
+	  </header>
+      <main class="infotext">
+         <!-- skapar en main som gör att all text på startsidan blir likadan  -->
+         <h1>Zero</h1>
+         <!-- skapar en h1-rubrik -->
+         <p>
+            <!-- skapar en paragraph som visar upp texten på samma sätt som den är skriven i htmldokumentet -->
+            Counter-Strike: Source är ett multiplayerspel, men spelaren kan också spela mot datorstyrda motståndare. 
+            Spelaren väljer ett lag, antingen terrorist eller antiterrorist, och målen för seger skiljer sig åt från bana till bana.
+            Varje bana spelas ett överenskommet antal omgångar innan man byter till nästa. 
+            Det går alltid att vinna omgången genom att döda hela det andra laget. 
+            Andra segervillkor kan vara att terroristerna ska spränga en plats, och då ska antiterroristsstyrkan försöka hindra bomben från att explodera eller gisslanuppdrag, där terroristerna har tagit gisslan och antiterroristsstyrkan ska rädda dem.
+            För att utföra uppdraget så har båda lagen virtuella vapen till sitt förfogande. De flesta av dessa är baserade på verkliga vapen. 
+            Dessa köps i början av omgången med pengar som man tjänar genom att vinna rundor och döda motståndare.
+         </p>
+         <!-- avslutar paragraph -->
+      </main>
+      <!-- avslutar main -->
+      <img src="https://fiverr-res.cloudinary.com/images/t_main1,q_auto,f_auto,q_auto,f_auto/gigs/110952558/original/1e50e38e0e26ad49c9b6f13b43bde79bfe7e4d98/counter-strike-source-best-non-steam-server-make-for-u.jpg" alt="En bild på spelets framsida"><!-- Lägger till en bild -->
+   </body>
+   <!-- avslutar body -->
+</html>
+<!-- avslutar html -->
